# cubespec

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  notebooks.yml  publish.yml
binder/: README.md  environment.yml  postBuild
data/: reference_cubes.csv
examples/: README.md  correlated_geometry_full.csv  correlation_geometry.csv  cube_lab_measurements.csv  default_csp.csv  high_load_scenario.csv  madina_template.csv
examples/plots/: plot_measured_vs_predicted.py  plot_p9_histogram.py  plot_rsm_contour.py  plot_sobol_bars.py
notebooks/: 01_quickstart.ipynb  02_csp_io.ipynb  02_doe_full_vs_fractional.ipynb  03_live_controls.ipynb  03_rsm_contour.ipynb  04_sampling_strategies.ipynb  04_sobol_sensitivity.ipynb  05_bootstrap_ci.ipynb  05_correlation_presets.ipynb  06_doe_full.ipynb  07_doe_fractional.ipynb  08_doe_multilevel.ipynb  09_doe_interactions.ipynb  10_doe_measurements.ipynb  11_sobol.ipynb  12_rsm.ipynb  13_optimise.ipynb  14_uncertainty_reliability.ipynb  15_calibrated_vs_analytic.ipynb  16_full_report_parity.ipynb  README.md  _template.ipynb
scripts/: build_calibration.py  build_docs.py  build_docs_manifest.py  build_poster.py  build_qa_audit.py  build_validation_figures.py
src/cubespec/: __init__.py  bootstrap.py  cli.py  correlation.py  diagnostics.py  doe.py  exports.py  measurements.py  model.py  optimise.py  params.py  report.py  rng.py  rsm.py  sampling.py  sobol.py  surrogate.py  uncertainty.py
src/cubespec/models/: poly2_ridge.json  poly2_ridge_residuals.json
tests/: test_bootstrap.py  test_diagnostics.py  test_doe.py  test_model.py  test_optimise.py  test_parity.py  test_parity_calibrated.py  test_properties.py  test_sobol.py  test_uncertainty.py
tests/fixtures/: calibrated_seed_1337_n256.json  parity_seed_1337.json
